--- a/views/about-adventurers.html
+++ b/views/about-adventurers.html
@@ -15,6 +15,8 @@
         </section>
     </section>
     <!--You will need to add a ui-sref here that points the packages state-->
+    
+    <a ui-sref="packages"></a>
 
     <button>View Packages</button>
 
